--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "laravel-lang/lang": "15.22",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
-        "laravel/ui": "^4.6"
+        "laravel/ui": "^4.6",
+        "symfony/mailer": "^7.3"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
